# rig

./: .editorconfig  .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE  clippy.toml  readme.md
.claude/agents/claudio/: claude-commands-analyst.md  claude-sdk-architect.md  claude-subagents-analyst.md  claudio-coordinator-agent.md  claudio-install-commands-test.md  claudio-install-test.md  claudio-structure-creator-agent.md  claudio-test-suite.md  claudio-upgrade-test.md  code-quality-analyzer.md  command-agent-integration-validator.md  design-analyzer.md  discovery-agent.md  documentation-coordinator.md  documentation-readme-creator.md  documentation-user-guide-creator.md  extended-context-content-validator.md  extended-context-dependency-validator.md  git-commit-message.md  implement-agent.md  index.md  install-commands-coordinator-agent.md  install-commands-only-agent.md  install-coordinator-agent.md  install-full-workflow-agent.md  install-summary-agent.md  install-system-installer.md  install-system-installer.md.backup  install-user-templates-agent.md  install-validation-coordinator.md  install-validator.md  installation-mode-validator.md  new-command-generator.md  newprompt-agent-creator.md  newprompt-command-creator.md  newprompt-coordinator.md  newprompt-integration-planner.md  orchestrator-integration-validator.md  phoenix-dev-executor.md  plan-agent.md  (+12 more)
.claude/agents/claudio/extended_context/agent-analysis/: architecture-patterns.md  context-integration.md  evaluation-framework.md  troubleshooting.md
.claude/agents/claudio/extended_context/claudio/: upgrade-troubleshooting.md
.claude/agents/claudio/extended_context/command-analysis/: best-practices.md  evaluation-framework.md  integration-patterns.md  troubleshooting.md
.claude/agents/claudio/extended_context/phoenix-dev/: overview.md
.claude/commands/claudio/: claude-sdk.md  claudio.md  code-quality.md  design.md  discovery.md  documentation.md  gcms.md  implement.md  install-commands.md  install.md  new-command.md  newprompt.md  phoenix-dev.md  plan.md  prd.md  research.md  security-review.md  task.md  test-review.md  upgrade.md
.claudio/: discovery.md  plan.md  prd.md  project_status.md  status.md  summary.md
.claudio/docs/: discovery.md  installation-report.md
.claudio/phase1/: claude.md  phase_status.md  tasks.md
.claudio/phase1/task1/: claude.md  status.md
.claudio/phase1/task2/: claude.md  status.md
.claudio/phase1/task3/: claude.md  status.md
.claudio/phase1/task4/: claude.md  status.md
.claudio/phase2/: claude.md  phase_status.md  tasks.md
.claudio/phase2/task1/: claude.md  status.md
.claudio/phase3/: claude.md  phase_status.md  tasks.md
.claudio/phase4/: claude.md  phase_status.md  tasks.md
.claudio/phase5/: claude.md  phase_status.md  tasks.md
.claudio/shared/coordination/: claude.md
.claudio/shared/standards/: claude.md
.claudio/shared/utilities/: claude.md
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/commands/: auth.rs  mod.rs  status.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/auth/: mod.rs
core/src/config/: mod.rs
core/src/http/: mod.rs
tests/integration/: cli_tests.rs  main.rs
utils/: Cargo.toml
utils/src/: formatting.rs  lib.rs  validation.rs
(+7 files in other folders)
