[package]
name = "rig"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for the Max platform"

[[bin]]
name = "rig"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# Local workspace crates
rig-core = { path = "../core" }
rig-utils = { path = "../utils" }

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true